# AptPostProcessor

./: .gitignore  BuildWindowsX64.bat  DMU50-Table.STL  Frame1.swp  Frames1.swp  LICENSE  Makefile  README.md  machine.h  mtests.sh
SolidWorks/: AAMount.SLDASM  DMU50-Table.SLDASM  DMU50-Table.SLDPRT  Spacer1.SLDPRT  holder-medium.SLDPRT  holder-pole.SLDPRT  holder-small.SLDPRT
cirpivot/: CMakeLists.txt  cirpivot  cirpivot.cpp  cirpivot.h  setpath.bat
cirpivot/.cmake/api/v1/reply/: cache-v2-94c7e979fe866cb8e52a.json  cmakeFiles-v1-20747d3432e4b572cec0.json  codemodel-v2-92b279c270c31f90f576.json  index-2021-04-06T07-54-15-0533.json  target-cirpivot-11c059e1c2f10daf0f9b.json
clsplit/: APT.h  CMakeLists.txt  CSCAD.h  CreateSCAD.h  CreateTRef.h  README.md  TOOLS.h  TREF.h  TRef.h  clsplit  clsplit.cpp  clsplit.h  readtools.h
findloop/: CMakeLists.txt  findloop.cpp
flip/: CMakeLists.txt  flip.cpp  flip.h
machine-code/: 0D.h  CIRCLE.scad  CIRCLE.txt  CIRSTUD.h  CUT.h  DASHCEN.h  DASHCOR.h  MEASTOK.h  MESTOOL.h  PRINTR0.h  PRINTR1.h  PRINTREF.h  PROFILE.h  README.txt  RECTIFI.h  SET.TOOLS.1  TOOL.T  WALL.h  WALLX20X20.h  WALLY20X20.h  XDIAL.h  YDIAL .h  YDIAL.h  ZDIAL.h
micromeasure/: CMakeLists.txt  README.txt  micromeasure.cpp  properties.txt
parts-2021/: Sacrifice-Board.SLDPRT  Sacrifice-Board.STL  Sacrifice-Board.apt  Teste-Metrologia.SLDPRT  Teste-Metrologia.STL  Teste-Metrologia.apt  basemach.SLDPRT  basemach.STL  basemach.apt
parts-2022/: 2.5d-grabcad.SLDPRT  2DFreze-grabcad.sldprt  Dem-target1.SLDPRT  Dem-target1.STL  Dem-target1.apt  Dem-target2.SLDPRT  Dem-target2.STL  Dem-target2.apt  Interface-glue.SLDPRT  Interface-glue.STL  Interface-glue.apt  Interface-glue.clt  Interface-glue2.apt  Interface-glue3.apt  Interface-glue4.apt  SupPetriLED.SLDPRT  SupPetriLED.STL  SupPetriLED.apt  Top-light-cover.SLDPRT  Top-light-cover.apt  bosch-bar.SLDPRT  shim em cunha.SLDPRT  shim em cunha.STL  shim em cunha.apt  shimemcunha.SLDPRT  shimemcunha.apt
parts-2023/: Teflon-gasket.SLDPRT  Teflon-gasket.STL  Teflon-gasket.apt
parts-2024/: Suporte-parede-side-drill.apt  Suporte-parede-top.apt  Suporte-paredeH-edge.apt  Suporte-paredeH-middle-drill.apt  Suporte-paredeTrava-Direita.apt  Suporte-paredeTrava.Esquerda.apt  manufacture3-bottom.apt  manufacture3-top.apt
parts-2025/: Guincho_LLbar-left.STL  Guincho_LLbar-left.apt  Guincho_LLbar.STL  Guincho_LLbar.apt  Guincho_LLbar1.STL  Guincho_LLbar1.apt  Guincho_LLbar2.STL  Guincho_LLbar2.apt  Guincho_Lbar-1.stl  Guincho_Lbar.STL  Guincho_Lbar.apt  Guincho_Lbar1.apt  Guincho_Lbar1.stl  Guincho_Lbar2.STL  Guincho_Lbar2.apt  Guincho_Lbar2.scad  Guincho_Lbar3.apt  Guincho_Lbar3.scad  Guincho_Lbar3.stl  Leg-holder-thick.apt  Leg-holder-thin.apt  METIS-506-7-5-D-4-Collimator-support.apt  Paralelipipedo-furos.apt  Paralelipipedo.STL  Paralelipipedo.apt  Paralelipipedo2.STL  Paralelipipedo2.apt  RotateThick.apt  RotateThin.STL  RotateThin.apt  SlewMachine.apt  Telemecanique-Tilt-Support.apt  Telemecanique-Tilt-Support.scad  Telemecanique-Tilt-Support.stl  Telemecanique-Tilt-Support1.apt  Telemecanique-Tilt-Support1.scad  Telemecanique-Tilt-Support1.stl  Telemecanique-Tilt-Support2.apt  Telemecanique-Tilt-Support2.scad  Telemecanique-Tilt-Support2.stl  (+2 more)
parts-tools/: boss.SLDPRT  boss.apt  boss.set  boss.txt  wall-holes.SLDPRT  wall-holes.apt  ~$wall-holes.SLDPRT
skiptool/: CMakeLists.txt  skiptool.cpp
tests/parts-2021/Sacrifice-Board/: 0TREF.h  11.h  11op1.scad  11op2.scad  11op3.scad  11op4.scad  912.h  912op5.scad  912op6.scad  912op7.scad  912op8.scad  912setup.h
tests/parts-2021/Teste-Metrologia/: 0TREF.h  11.h  11op1.scad  11op2.scad  12.h  12op3.scad  12op4.scad  12setup.h
tests/parts-2021/basemach/: 0TREF.h  11.h  11op1.scad  11op10.scad  11op11.scad  11op12.scad  11op2.scad  11op3.scad  11op4.scad  11op5.scad  11op6.scad  11op7.scad  11op8.scad  11op9.scad
tests/parts-2022/Dem-target1/: 0TREF.h  11.h  11op1.scad
tests/parts-2022/Dem-target2/: 0TREF.h  11.h  11op1.scad  11op2.scad  11op3.scad  11op4.scad  11op5.scad  11op6.scad
tests/parts-2022/Interface-glue/: 0TREF.h  11.h  11op1.scad  11op2.scad  11op3.scad  11op4.scad
(+75 files in other folders)
